tests/miniJava/pos/001066_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) java = 0 ; else java [ 0 ] = 0 ; } }
