tests/miniJava/neg/004280_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int public int [] java ( ) { return 0 ; } }
